--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -974,21 +974,24 @@ h4.title {
 
 .search-form .heading {
   text-align: center;
-  margin-bottom: 20px; }
+  margin-top: 20px;
+  /*margin-bottom: 20px;*/
+}
 
 .search-form .heading h2 {
   font-size: 42px;
   margin-top: 0;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   font-weight: bold;
-  color: #FFF; }
+  color: #FFF;
+}
 
 @media (max-width: 991px) {
   .search-form .heading h2 {
     font-size: 32px; } }
 .search-form .heading h3 {
   margin-top: 0;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
   font-size: 18px;
   font-weight: normal;
   color: #FFF; }
