--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -651,7 +651,8 @@ hr {
   padding: 15px;
   border-radius: 3px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px; }
+  /*margin-bottom: 20px; */
+}
 
 .card.shadow {
   padding: 15px !important;
