--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2500,12 +2500,22 @@ input[type="radio"], input[type="checkbox"] {
   background-color: #e4e4e4;
 }
 .details-expanded {
-  font-size: 16px;
   color: #1a1a1a;
+  font-size: 20px;
+  margin: 20px 0 20px 0;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ddd;
+  font-weight: ;
+  line-height: 35px;
 }
 .details-not-expanded {
-  font-size: 16px;
+  font-size: 20px;
+  margin: 20px 0 20px 0;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ddd;
+  font-weight: 500;
   color: #0074e4;
+  line-height: 35px;
 }
 
 /* 19. Business Specific Details 
