--- a/src/main/resources/static/scss/_search.scss
+++ b/src/main/resources/static/scss/_search.scss
@@ -22,7 +22,7 @@
 	right: 0;
 	top: 0;
 	bottom: 0;
-	background: url(../img/mask_grey1.png) no-repeat center center;
+	background: no-repeat center center;
 	background-size: cover;
 	z-index:1;
 }
