Show red pin and For Sale on Top left of business image on search page

--- a/src/main/resources/static/scss/_listing.scss
+++ b/src/main/resources/static/scss/_listing.scss
@@ -98,12 +98,24 @@
 .item-listing .item .save-item {
 	display: block;
 	position: absolute;
-	bottom: 15px;
-	right: 15px;
+	bottom: 5px;
+	right: 5px;
 	width: 40px;
 	height: 40px;
 	font-size: 20px;
 	line-height: 42px;
+	color: #fff;
+	text-align: center;
+	border-radius: 50%;
+	background-color: rgba(0,0,0,0.3);
+}
+.item-listing .item .save-item-left {
+	display: block;
+	position: absolute;
+	bottom: 5px;
+	left: 10px;
+	font-size: 20px;
+	font-weight:bold;
 	color: #fff;
 	text-align: center;
 	border-radius: 50%;
